# touza/zbt/tests Makefile.am
# Maintainer:  SAITO Fuyuki
# Created: Jul 24 2024
# Time-stamp: <2024/08/08 16:01:54 fuyuki Makefile.am>

# Copyright (C) 2024
#           Japan Agency for Marine-Earth Science and Technology
#
# Licensed under the Apache License, Version 2.0
#   (https://www.apache.org/licenses/LICENSE-2.0)

EXTRA_DIST = gen_demo.sh 

noinst_PYTHON = 
noinst_PYTHON += test_libtouza.py test_xrnio.py

# dummy
all:

install-mod:

uninstall-mod:

